--- a/packages/astro-embed-gist/package.json
+++ b/packages/astro-embed-gist/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@astro-community/astro-embed-gist",
-  "version": "0.5.2",
+  "version": "0.0.1",
   "description": "Component to easily embed Gists on your Astro site",
   "type": "module",
   "exports": {
@@ -8,7 +8,7 @@
     "./matcher": "./matcher.ts"
   },
   "files": [
-    "index.ts",
+    "*.ts",
     "Gist.astro"
   ],
   "repository": {
@@ -21,7 +21,7 @@
     "embeds",
     "gist"
   ],
-  "author": "delucis",
+  "author": "justsml",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/delucis/astro-embed/issues"
@@ -31,6 +31,6 @@
     "@astro-community/astro-embed-utils": "^0.1.0"
   },
   "peerDependencies": {
-    "astro": "^2.0.0 || ^3.0.0-beta || ^4.0.0-beta"
+    "astro": "^2.0.0 || ^3.0.0-beta || ^4.0.0-beta || ^4.0.0"
   }
 }
